--- a/hyperapp/client/command_list.fixtures.resources.yaml
+++ b/hyperapp/client/command_list.fixtures.resources.yaml
@@ -7,9 +7,13 @@ import:
 - legacy_service.mosaic
 - legacy_service.types
 - legacy_type.attribute.attribute
+- legacy_type.call.call
 - legacy_type.command_list.global_command_list
 - legacy_type.command_list.object_command_list
 - legacy_type.command_list.view_command_list
+- legacy_type.command_list_fixtures.sample_global_command_d
+- legacy_type.impl.global_command_impl
+- legacy_type.legacy_type.type
 - legacy_type.python_module.python_module
 associations: []
 definitions:
@@ -18,15 +22,43 @@ definitions:
     module_name: command_list.fixtures
     file_name: command_list.fixtures.dyn.py
     import_list:
+      htypes.call.call: legacy_type.call.call
       htypes.command_list.global_command_list: legacy_type.command_list.global_command_list
       htypes.command_list.object_command_list: legacy_type.command_list.object_command_list
       htypes.command_list.view_command_list: legacy_type.command_list.view_command_list
+      htypes.command_list_fixtures.sample_global_command_d: legacy_type.command_list_fixtures.sample_global_command_d
+      htypes.impl.global_command_impl: legacy_type.impl.global_command_impl
+      htypes.legacy_type.type: legacy_type.legacy_type.type
       services.mosaic: legacy_service.mosaic
       services.param: guesser.marker.param
       services.service: guesser.marker.service
       services.types: legacy_service.types
       view_command: legacy_module.async.ui.view_command
-  global_command_list_attribute:
+  global_command_list:
     _type: legacy_type.attribute.attribute
     object: command_list_fixtures_module
     attr_name: global_command_list
+  param.GlobalCommandList.piece:
+    _type: legacy_type.attribute.attribute
+    object: command_list_fixtures_module
+    attr_name: param_GlobalCommandList_piece
+  param.ObjectCommandList.piece:
+    _type: legacy_type.attribute.attribute
+    object: command_list_fixtures_module
+    attr_name: param_ObjectCommandList_piece
+  param.ViewCommandList.piece:
+    _type: legacy_type.attribute.attribute
+    object: command_list_fixtures_module
+    attr_name: param_ViewCommandList_piece
+  param.object_commands.piece:
+    _type: legacy_type.attribute.attribute
+    object: command_list_fixtures_module
+    attr_name: param_object_commands_piece
+  param.object_commands.view_state:
+    _type: legacy_type.attribute.attribute
+    object: command_list_fixtures_module
+    attr_name: param_object_commands_view_state
+  service.root_view:
+    _type: legacy_type.attribute.attribute
+    object: command_list_fixtures_module
+    attr_name: service_root_view
