--- a/hyperapp/guesser/attr_visitor.resources.yaml
+++ b/hyperapp/guesser/attr_visitor.resources.yaml
@@ -17,10 +17,10 @@ definitions:
     _type: legacy_type.piece_ref.piece_ref
     value: guesser.runner.get_resource_type
 
-  global_module:
+  attr_visitor_module:
     _type: legacy_type.python_module.python_module
-    module_name: global
-    file_name: global.dyn.py
+    module_name: attr_visitor
+    file_name: attr_visitor.dyn.py
     import_list:
       htypes.attribute.attribute: legacy_type.attribute.attribute
       htypes.call.call: legacy_type.call.call
@@ -32,7 +32,7 @@ definitions:
       services.python_object_creg: legacy_service.python_object_creg
       services.runner_method_get_resource_type_ref: runner_method_get_resource_type_ref
 
-  GlobalVisitor:
+  AttrVisitor:
     _type: legacy_type.attribute.attribute
-    object: global_module
-    attr_name: GlobalVisitor
+    object: attr_visitor_module
+    attr_name: AttrVisitor
