--- a/hyperapp/guesser/construct_resources.resources.yaml
+++ b/hyperapp/guesser/construct_resources.resources.yaml
@@ -5,10 +5,11 @@ import:
   - legacy_service.rpc_endpoint_factory
   - legacy_type.attribute.attribute
   - legacy_type.python_module.python_module
+  - guesser.attr_visitor.attr_visitor_module
   - guesser.constructor.Constructor
   - guesser.custom_resource_module_registry.custom_resource_module_registry_module
-  - guesser.global.global_module
-  - guesser.module.ModuleVisitor
+  - guesser.module_visitor.module_visitor_module
+  - guesser.object_visitor.object_visitor_module
   - sync.subprocess_context.subprocess_running
 
 definitions:
@@ -20,13 +21,14 @@ definitions:
     import_list:
       htypes.python_module.python_module: legacy_type.python_module.python_module
       services.Constructor: guesser.constructor.Constructor
-      services.ModuleVisitor: guesser.module.ModuleVisitor
       services.endpoint_registry: legacy_service.endpoint_registry
       services.generate_rsa_identity: legacy_service.generate_rsa_identity
       services.module_dir_list: legacy_service.module_dir_list
       services.rpc_endpoint_factory: legacy_service.rpc_endpoint_factory
       services.subprocess_running: sync.subprocess_context.subprocess_running
-      globl: guesser.global.global_module
+      attr_visitor: guesser.attr_visitor.attr_visitor_module
+      module_visitor: guesser.module_visitor.module_visitor_module
+      object_visitor: guesser.object_visitor.object_visitor_module
       custom_resource_module_registry: guesser.custom_resource_module_registry.custom_resource_module_registry_module
 
   construct_resources:
