Marker: add 'module' fixture root; add function wrapper functionality

--- a/hyperapp/guesser/marker.resources.yaml
+++ b/hyperapp/guesser/marker.resources.yaml
@@ -19,3 +19,8 @@ definitions:
     _type: legacy_type.attribute.attribute
     object: marker_module
     attr_name: service
+
+  module:
+    _type: legacy_type.attribute.attribute
+    object: marker_module
+    attr_name: module
