--- a/hyperapp/guesser/module_visitor.resources.yaml
+++ b/hyperapp/guesser/module_visitor.resources.yaml
@@ -1,6 +1,6 @@
 import:
 - guesser.auto_importer.auto_importer_imports_fn
-- guesser.auto_importer.auto_importer_loader
+- guesser.auto_importer.auto_importer
 - legacy_type.attribute.attribute
 - legacy_type.piece_ref.piece_ref
 - legacy_type.python_module.import_rec
@@ -12,9 +12,9 @@ definitions:
     _type: legacy_type.piece_ref.piece_ref
     value: guesser.auto_importer.auto_importer_imports_fn
 
-  auto_importer_loader_ref:
+  auto_importer_ref:
     _type: legacy_type.piece_ref.piece_ref
-    value: guesser.auto_importer.auto_importer_loader
+    value: guesser.auto_importer.auto_importer
 
   module_visitor_module:
     _type: legacy_type.python_module.python_module
@@ -24,7 +24,7 @@ definitions:
       htypes.python_module.python_module: legacy_type.python_module.python_module
       htypes.python_module.import_rec: legacy_type.python_module.import_rec
       services.auto_importer_imports_ref: auto_importer_imports_ref
-      services.auto_importer_loader_ref: auto_importer_loader_ref
+      services.auto_importer_ref: auto_importer_ref
 
   ModuleVisitor:
     _type: legacy_type.attribute.attribute
