--- a/hyperapp/guesser/module_visitor.resources.yaml
+++ b/hyperapp/guesser/module_visitor.resources.yaml
@@ -2,6 +2,7 @@ import:
 - guesser.import_resources.import_resources_module
 - legacy_type.attribute.attribute
 - legacy_type.auto_importer.auto_importer
+- legacy_type.auto_importer.resource
 - legacy_type.python_module.import_rec
 - legacy_type.python_module.python_module
 - legacy_service.mosaic
@@ -14,6 +15,7 @@ definitions:
     file_name: module_visitor.dyn.py
     import_list:
       htypes.auto_importer.auto_importer: legacy_type.auto_importer.auto_importer
+      htypes.auto_importer.resource: legacy_type.auto_importer.resource
       htypes.python_module.python_module: legacy_type.python_module.python_module
       htypes.python_module.import_rec: legacy_type.python_module.import_rec
       services.mosaic: legacy_service.mosaic
