--- a/hyperapp/guesser/construct_resources.resources.yaml
+++ b/hyperapp/guesser/construct_resources.resources.yaml
@@ -8,6 +8,7 @@ import:
   - guesser.attr_visitor.attr_visitor_module
   - guesser.constructor.Constructor
   - guesser.custom_resource_module_registry.custom_resource_module_registry_module
+  - guesser.import_resources.import_resources_module
   - guesser.module_visitor.module_visitor_module
   - guesser.object_visitor.object_visitor_module
   - sync.subprocess_context.subprocess_running
@@ -27,9 +28,10 @@ definitions:
       services.rpc_endpoint_factory: legacy_service.rpc_endpoint_factory
       services.subprocess_running: sync.subprocess_context.subprocess_running
       attr_visitor: guesser.attr_visitor.attr_visitor_module
+      custom_resource_module_registry: guesser.custom_resource_module_registry.custom_resource_module_registry_module
+      import_resources: guesser.import_resources.import_resources_module
       module_visitor: guesser.module_visitor.module_visitor_module
       object_visitor: guesser.object_visitor.object_visitor_module
-      custom_resource_module_registry: guesser.custom_resource_module_registry.custom_resource_module_registry_module
 
   construct_resources:
     _type: legacy_type.attribute.attribute
