Use .service and .module siffixes for resources

--- a/hyperapp/guesser/constructor.resources.yaml
+++ b/hyperapp/guesser/constructor.resources.yaml
@@ -2,6 +2,8 @@ import:
   - legacy_service.resource_module_factory
   - legacy_service.resource_type_producer
   - legacy_type.attribute.attribute
+  - legacy_type.call.call
+  - legacy_type.inspect.fn_attr
   - legacy_type.python_module.python_module
 
 definitions:
@@ -12,6 +14,8 @@ definitions:
     file_name: constructor.dyn.py
     import_list:
       htypes.attribute.attribute: legacy_type.attribute.attribute
+      htypes.call.call: legacy_type.call.call
+      htypes.inspect.fn_attr: legacy_type.inspect.fn_attr
       htypes.python_module.python_module: legacy_type.python_module.python_module
       services.resource_module_factory: legacy_service.resource_module_factory
       services.resource_type_producer: legacy_service.resource_type_producer
